Fix persistent debug_70 overwrite in JS and gap in mobile layout

--- a/css/style.css
+++ b/css/style.css
@@ -713,6 +713,8 @@ body {
         padding-bottom: 70px;
         touch-action: pan-x pan-y;
         padding-top: 30px;
+        margin-top: -1px;
+        /* Force eliminate sub-pixel gaps */
     }
 
     #table-wrapper {
